server/compilers/goLiteJS/src/test/ml1/invalid/package9.go
// no package declaration
func main(){}
